--- a/style.css
+++ b/style.css
@@ -8,12 +8,17 @@ html {
   float: right;
 }
 
+.title {
+  margin-top: 10px;
+}
+
 .box {
   height: 40px;
   width: 40px;
   border-style: solid;
   border-width: 1px;
   float: left;
+  cursor: pointer; 
 }
 
 .clr-field {
@@ -24,11 +29,13 @@ html {
   display: flex;
   justify-content: space-between;
 }
+
 .row.border-above {
   border-top: 1px solid grey;
   padding-top: 15px;
   margin-top: 15px;
 }
+
 .column {
   display: flex;
   flex-direction: column;
@@ -36,10 +43,137 @@ html {
   align-items: center;
 }
 
-#pallete {
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding-top: 50px;
+}
+
+.modal-content {
+  position: relative;
+  margin: auto;
+  padding: 20px;
+  width: 80%;
+  max-width: 600px;
+  background-color: white;
+  border: 1px solid #888;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
+
+.button-group {
+  display: flex;
+  justify-content: flex-end; 
+  margin-top: 10px;
+}
+
+.reset-colors-button {
+  margin-right: 10px;
+}
+
+.close-modal-button {
+  width: auto; 
+}
+
+.close {
+  color: #aaa;
+  position: absolute;
+  top: 10px; 
+  left: 10px; 
+  font-size: 28px;
+  font-weight: bold;
+}
+
+
+.grid-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.button-group {
+  display: flex;
+  margin-top: 20px;
+}
+
+.modal-content h2 {
+  text-align: center;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#colorPaletteContainer {
+  display: grid;
+  gap: 10px; 
+  margin-top: 20px;
+}
+
+.color-button {
+  height: 50px;
+  width: 50px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer; 
+}
+
+.color-picker {
+  width: 100%; 
+  max-width: 300px; 
+}
+
+.palette-container.hide {
+  display: none;
+}
+
+.input-short {
+  max-width: 150px;
+  margin-right: 10px;
+}
+
+#grids-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 20px;
+}
+
+.spacer {
+  height: 20px;
+}
+
+.grid-container {
+  width: 100%;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
 .blue {
   background: blue;
 }
@@ -64,7 +198,6 @@ html {
   background: purple;
 }
 
-
 .topEdge {
   border-top-width: 2.5px;
 }
@@ -84,4 +217,10 @@ html {
 #grid .blank {
   background: white !important;
 }
-  
+
+hr {
+  border-top: 1px solid grey;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  clear: both;
+}
